// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseQuery - error message snapshots > array with mixed valid and invalid enum values 1`] = `
[Error: Field 'sorting' elements have the following issues:
  Item 'sorting[1]': Invalid option: expected one of "priority"|"priorityAscending"|"priorityDescending"|"date"|"dateAscending"|"dateDescending"|"order"|"dateAdded"|"dateAddedAscending"|"dateAddedDescending"|"alphabetical"|"alphabeticalAscending"|"alphabeticalDescending"]
`;

exports[`parseQuery - error message snapshots > autorefresh must be a number 1`] = `
[Error: Field 'autorefresh' has the following issues:
  Invalid input: expected number, received string]
`;

exports[`parseQuery - error message snapshots > autorefresh must be non-negative 1`] = `
[Error: Field 'autorefresh' has the following issues:
  Too small: expected number to be >=0]
`;

exports[`parseQuery - error message snapshots > filter must be a string 1`] = `
[Error: Field 'filter' has the following issues:
  Invalid input: expected string, received number]
`;

exports[`parseQuery - error message snapshots > groupBy must be a string 1`] = `
[Error: Field 'groupBy' has the following issues:
  Invalid option: expected one of "project"|"section"|"priority"|"due"|"date"|"labels"]
`;

exports[`parseQuery - error message snapshots > groupBy must have valid enum value 1`] = `
[Error: Field 'groupBy' has the following issues:
  Invalid option: expected one of "project"|"section"|"priority"|"due"|"date"|"labels"]
`;

exports[`parseQuery - error message snapshots > invalid JSON - missing quotes 1`] = `
[Error: Field 'filter' has the following issues:
  Invalid input: expected string, received undefined]
`;

exports[`parseQuery - error message snapshots > invalid JSON - unclosed brace 1`] = `[Error: Unable to parse as YAML or JSON]`;

exports[`parseQuery - error message snapshots > invalid YAML - incorrect indentation 1`] = `[Error: Unable to parse as YAML or JSON]`;

exports[`parseQuery - error message snapshots > missing required filter field 1`] = `
[Error: Field 'filter' has the following issues:
  Invalid input: expected string, received undefined]
`;

exports[`parseQuery - error message snapshots > multiple validation errors 1`] = `
[Error: Field 'name' has the following issues:
  Invalid input: expected string, received number
Field 'filter' has the following issues:
  Invalid input: expected string, received undefined
Field 'autorefresh' has the following issues:
  Too small: expected number to be >=0
Field 'sorting' has the following issues:
  Invalid input: expected array, received string]
`;

exports[`parseQuery - error message snapshots > name must be a string 1`] = `
[Error: Field 'name' has the following issues:
  Invalid input: expected string, received number]
`;

exports[`parseQuery - error message snapshots > neither valid JSON nor YAML 1`] = `[Error: Invalid input: expected object, received string]`;

exports[`parseQuery - error message snapshots > show array must contain strings 1`] = `
[Error: Field 'show' has the following issues:
  Invalid input: expected "none"
Field 'show' elements have the following issues:
  Item 'show[0]': Invalid option: expected one of "due"|"date"|"description"|"labels"|"project"|"deadline"|"time"
  Item 'show[1]': Invalid option: expected one of "due"|"date"|"description"|"labels"|"project"|"deadline"|"time"
  Item 'show[2]': Invalid option: expected one of "due"|"date"|"description"|"labels"|"project"|"deadline"|"time"]
`;

exports[`parseQuery - error message snapshots > show field - invalid literal (not 'none') 1`] = `
[Error: Field 'show' has the following issues:
  Invalid input: expected array, received string
  Invalid input: expected "none"]
`;

exports[`parseQuery - error message snapshots > show must have valid enum values 1`] = `
[Error: Field 'show' has the following issues:
  Invalid input: expected "none"
Field 'show' elements have the following issues:
  Item 'show[0]': Invalid option: expected one of "due"|"date"|"description"|"labels"|"project"|"deadline"|"time"
  Item 'show[1]': Invalid option: expected one of "due"|"date"|"description"|"labels"|"project"|"deadline"|"time"]
`;

exports[`parseQuery - error message snapshots > sorting array must contain strings 1`] = `
[Error: Field 'sorting' elements have the following issues:
  Item 'sorting[0]': Invalid option: expected one of "priority"|"priorityAscending"|"priorityDescending"|"date"|"dateAscending"|"dateDescending"|"order"|"dateAdded"|"dateAddedAscending"|"dateAddedDescending"|"alphabetical"|"alphabeticalAscending"|"alphabeticalDescending"
  Item 'sorting[1]': Invalid option: expected one of "priority"|"priorityAscending"|"priorityDescending"|"date"|"dateAscending"|"dateDescending"|"order"|"dateAdded"|"dateAddedAscending"|"dateAddedDescending"|"alphabetical"|"alphabeticalAscending"|"alphabeticalDescending"
  Item 'sorting[2]': Invalid option: expected one of "priority"|"priorityAscending"|"priorityDescending"|"date"|"dateAscending"|"dateDescending"|"order"|"dateAdded"|"dateAddedAscending"|"dateAddedDescending"|"alphabetical"|"alphabeticalAscending"|"alphabeticalDescending"]
`;

exports[`parseQuery - error message snapshots > sorting must be an array 1`] = `
[Error: Field 'sorting' has the following issues:
  Invalid input: expected array, received string]
`;

exports[`parseQuery - error message snapshots > sorting must have valid enum values 1`] = `
[Error: Field 'sorting' elements have the following issues:
  Item 'sorting[0]': Invalid option: expected one of "priority"|"priorityAscending"|"priorityDescending"|"date"|"dateAscending"|"dateDescending"|"order"|"dateAdded"|"dateAddedAscending"|"dateAddedDescending"|"alphabetical"|"alphabeticalAscending"|"alphabeticalDescending"
  Item 'sorting[1]': Invalid option: expected one of "priority"|"priorityAscending"|"priorityDescending"|"date"|"dateAscending"|"dateDescending"|"order"|"dateAdded"|"dateAddedAscending"|"dateAddedDescending"|"alphabetical"|"alphabeticalAscending"|"alphabeticalDescending"]
`;
